Answer all the questions

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -48,6 +48,7 @@ mrow <- which.max(steps_5min[,"steps"] )
 steps_5min[mrow, "interval"]
 ```
 
+From the plot, it is obvious that 5-minute interval 835 contains the maximum number of steps
 
 ## Imputing missing values
 
@@ -109,3 +110,5 @@ xyplot(steps ~ interval|day_type,       ## conditional formula to get 4 panels
        groups=day_type,     ## group ti get differents colors
        layout=c(1,2))   ## equivalent to par or layout
 ```
+
+According to the plots, there are differences in activity patterns between weekdays and weekends?
